Added BCE xlabel; added James author info

--- a/ieee_spm/adjoints_in_gradients.tex
+++ b/ieee_spm/adjoints_in_gradients.tex
@@ -324,17 +324,16 @@ The results of the recovery are shown in Figure \ref{fig:bce_rec}.  We show the 
 
 \begin{figure}
    \centering
-   \includegraphics[width=0.5\textwidth]{figures/bce_rec_004_x_trim.pdf}
+   \includegraphics[width=0.5\textwidth]{figures/bce_rec_004_x.pdf}
    
-   \includegraphics[width=0.5\textwidth]{figures/bce_rec_004_h_trim_annotated.pdf}
+   \includegraphics[width=0.5\textwidth]{figures/bce_rec_004_h_annotated.pdf}
    %TODO We could try to use Inkscape again.  Its TeX output has some bugs...
    %\def\svgwidth{0.5\textwidth}
    %%\import{figures}{bce_rec_004_h_trim_annotated.pdf_tex}
    %\input{bce_rec_004_h_trim_annotated.pdf_tex}
    
-   \includegraphics[width=0.5\textwidth]{figures/bce_rec_004_s_trim.pdf}
+   \includegraphics[width=0.5\textwidth]{figures/bce_rec_004_s.pdf}
    \caption{Blind channel estimation via problem (\ref{eq:bce_aug}) for a simulated underwater acoustic impulsive source.  Shown are the true and estimated first channel output, first channel impulse response, and source.  There are obvious magnitude and time shift differences, but the estimated channel output and channel impulse response are remarkably similar in structure and potentially useful for studying the underwater channel.}
-   % TODO: label x-axis a bit
    \label{fig:bce_rec}
 \end{figure}
 
@@ -355,7 +354,7 @@ Another interesting adjoint appears in a blind channel estimation optimization p
 
 % if you will not have a photo at all:
 \begin{IEEEbiographynophoto}{James Folberth}
-Biography text here.
+(james.folberth@colorado.edu) is a Ph.D. student in Stephen Becker's information extraction group in the Department of Applied Mathematics at the University of Colorado at Boulder, USA.  His research interests include signal and image processing, machine learning, and optimization.
 \end{IEEEbiographynophoto}
 
 % if you will not have a photo at all:
